ui overflow correction

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,10 +12,11 @@
 }
 
 body {
+	background-color: #141625;
+	color: #ffffff;
 	font-family: Thiccboi, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
 		"Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
 		sans-serif;
-	background-color: #f8f8fb;
 }
 /* @media (prefers-color-scheme: dark) {
 	body {
@@ -23,10 +24,7 @@ body {
 		color: #ffffff;
 	}
 } */
-body {
-	background-color: #141625;
-	color: #ffffff;
-}
+
 .select__option {
 	color: black;
 }
